# mandelbrot-viewer

./: CMakeLists.txt  README.md  combineChunks.cpp  combineChunks.h  generateName.cpp  generateName.h  getUserInput.cpp  getUserInput.h  iterationsToColor.cpp  iterationsToColor.h  mandelbrot.cl  mandelbrot.cpp  mandelbrot.sln  mandelbrot.vcxproj  mandelbrot.vcxproj.filters  progressBar.cpp  progressBar.h  vcpkg.json
include/glad/: glad.h
lib/: glad.c
src/: main.cpp  shaders.h
src/utils/: input.cpp  input.h
